Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjectField.quorum
class Main
    Object v
    text t = "text"
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
